--- a/config-client-prod.yml
+++ b/config-client-prod.yml
@@ -2,7 +2,7 @@ build:
   version: "1.0"
 
 accounts:
-  message: "Welcome to config client related Prod APIs "
+  message: "Welcome to config client related bus APIs "
   contactDetails:
     name: "MT - Product Owner"
     email: "mt@eazybank.com"
